# terremoto

./: CMakeLists.txt  terremoto.cpp
Time history 10x0.50 Foam (d=6 m)/: Barrier_Ah.txt  Barrier_Av.txt  Barrier_Uh.txt  Barrier_Uv.txt  Barrier_Vh.txt  Barrier_Vv.txt  No_Barrier_Ah.txt  No_Barrier_Av.txt  No_Barrier_Uh.txt  No_Barrier_Uv.txt  No_Barrier_Vh.txt  No_Barrier_Vv.txt
